titles and spacing fix

--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -133,8 +133,8 @@ ul,ol         { list-style:none; }
 .half-col .col-1{float: left;}
 .half-col .col-2{float: right;}
 
-.third {width:33%;}
-.twothird {width: 66%;}
+.third {width:36%;}
+.twothird {width: 62%;}
 
 
 
